custom for cupangOs
custom for cupangOs

--- a/.github/workflows/use-releases-file-to-packaging.yml
+++ b/.github/workflows/use-releases-file-to-packaging.yml
@@ -11,12 +11,16 @@ on:
   workflow_dispatch:
     inputs:
       branch:
-        description: 'Select Branch [ lynx / lede ]'
+        description: 'Select Branch [ official / lede ]'
         required: false
         default: 'lede'
+      more_settings:
+        description: "More parameter settings"
+        required: false
+        default: ""
 
 env:
-  TZ: Asia/Jakarta
+  TZ: Asia/Shanghai
 
 jobs:
   build:
@@ -38,29 +42,28 @@ jobs:
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
         # Input value validation
-        ARR_BRANCH=("lynx" "lede")
+        ARR_BRANCH=("official" "lede")
         if [[ -n "${{ github.event.inputs.branch }}" && -n "$(echo "${ARR_BRANCH[@]}" | grep -w "${{ github.event.inputs.branch }}")" ]]; then
            RELEASES_BRANCH=${{ github.event.inputs.branch }}
         else
            RELEASES_BRANCH=lede
         fi
         echo "RELEASES_BRANCH=${RELEASES_BRANCH}" >> $GITHUB_ENV
-        echo "COMPILE_STARTINGTIME=$(date +"%Y.%m.%d.%H%M")" >> $GITHUB_ENV
+        echo "COMPILE_STARTINGTIME=$(date +"%m.%d.%H%M")" >> $GITHUB_ENV
 
     - name: Build OpenWrt firmware
       id: build
       if: (!cancelled())
       run: |
         [ -d openwrt-armvirt ] || mkdir -p openwrt-armvirt
-        curl -s "https://api.github.com/repos/${GITHUB_REPOSITORY}/releases" | grep -o "ImmortalWrt-21.02-${{ env.RELEASES_BRANCH }}-*./immortalwrt-armvirt-.*.tar.gz" | head -n 1 > DOWNLOAD_ARMVIRT
+        curl -s "https://api.github.com/repos/${GITHUB_REPOSITORY}/releases" | grep -o "openwrt_s9xxx_${{ env.RELEASES_BRANCH }}.*/openwrt-armvirt-.*.tar.gz" | head -n 1 > DOWNLOAD_ARMVIRT
         [ -s DOWNLOAD_ARMVIRT ] && wget -q -P openwrt-armvirt https://github.com/${GITHUB_REPOSITORY}/releases/download/$(cat DOWNLOAD_ARMVIRT)
         sudo chmod +x make
-        sudo ./make -d -b s922x_s905x3_s905d -k 5.10.90_5.4.170
-        sudo ./make -d -b s905x -k 5.4.170
-        curl -s "https://api.github.com/repos/${GITHUB_REPOSITORY}/releases" | grep -o "ImmortalWrt-21.02-${{ env.RELEASES_BRANCH }}-.*/ipk.tar.gz" | head -n 1 > DOWNLOAD_IPK
+        sudo ./make -d ${{ github.event.inputs.more_settings }}
+        curl -s "https://api.github.com/repos/${GITHUB_REPOSITORY}/releases" | grep -o "openwrt_s9xxx_${{ env.RELEASES_BRANCH }}.*/ipk.tar.gz" | head -n 1 > DOWNLOAD_IPK
         [ -s DOWNLOAD_IPK ] && wget -q -P out https://github.com/${GITHUB_REPOSITORY}/releases/download/$(cat DOWNLOAD_IPK)
         echo "PACKAGED_OUTPUTPATH=${PWD}/out" >> $GITHUB_ENV
-        echo "PACKAGED_OUTPUTDATE=$(date +"%Y.%m.%d.%H%M")" >> $GITHUB_ENV
+        echo "PACKAGED_OUTPUTDATE=$(date +"%m.%d.%H%M")" >> $GITHUB_ENV
         echo "::set-output name=status::success"
 
     - name: Upload OpenWrt Firmware to Release
