--- a/.github/workflows/build-cupangos.yml
+++ b/.github/workflows/build-cupangos.yml
@@ -121,8 +121,7 @@ jobs:
           * Firmware information
           Default IP: 192.168.1.1
           Default username: root
-          Default password: passwd
-          Default WIFI name: LYNX
+          Default password: root
+          Default WIFI name: CupangOs
           Default WIFI password: none
-          Install to EMMC: Login to OpenWrt → System → Amlogic Service → Install OpenWrt
 
