--- a/.github/workflows/build-cupangos.yml
+++ b/.github/workflows/build-cupangos.yml
@@ -5,7 +5,7 @@
 # Source code repository: https://github.com/openwrt/openwrt / Branch: 21.02
 #========================================================================================================================
 
-name: Build CupangOs-21.02
+name: Build CupangOs
 
 on:
   repository_dispatch:
@@ -112,12 +112,12 @@ jobs:
       uses: ncipollo/release-action@v1
       if: steps.build.outputs.status == 'success' && !cancelled()
       with:
-        tag: CupangOs-21.02-${{ env.PACKAGED_OUTPUTDATE }}
+        tag: CupangOs-${{ env.PACKAGED_OUTPUTDATE }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          CupangOs-21.02 Firmware for HG680P & B860H
+          CupangOs Firmware for HG680P & B860H
           * Firmware information
           Default IP: 192.168.1.1
           Default username: root
