--- a/router-config/CupangOs-21.02/.config
+++ b/router-config/CupangOs-21.02/.config
@@ -523,8 +523,9 @@ CONFIG_PACKAGE_luci-app-adblock=y
 CONFIG_PACKAGE_luci-app-amlogic=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-# CONFIG_PACKAGE_luci-app-zerotier is not set
+CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-ramfree=y
+CONFIG_PACKAGE_luci-app-tinyfm=y
 
 # LuCI-theme:
 CONFIG_PACKAGE_luci-theme-tano=y
