--- a/.github/workflows/build-cupangos.yml
+++ b/.github/workflows/build-cupangos.yml
@@ -100,7 +100,7 @@ jobs:
         [ -d openwrt-armvirt ] || mkdir -p openwrt-armvirt
         cp -f openwrt/bin/targets/*/*/*.tar.gz openwrt-armvirt/ && sync
         sudo chmod +x make
-        sudo ./make -d -b s905x -k 5.4.170
+        sudo ./make -d -b s905x -k 5.4.178_5.10.99_5.15.22_5.16.8
         [ -d ipk ] || mkdir -p ipk
         cp -rf $(find openwrt/bin/packages/ -type f -name "*.ipk") ipk/ && sync
         sudo tar -czf ipk.tar.gz ipk && mv -f ipk.tar.gz out/ && sync
