--- a/.github/workflows/build-cupangos.yml
+++ b/.github/workflows/build-cupangos.yml
@@ -14,8 +14,10 @@ on:
     #- cron: '0 17 * * 0'
 
 env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt
-  REPO_BRANCH: openwrt-21.02
+  #REPO_URL: https://github.com/immortalwrt/immortalwrt
+  #REPO_BRANCH: openwrt-21.02
+  REPO_URL: https://github.com/Lienol/openwrt
+  REPO_BRANCH: 21.02
   FEEDS_CONF: router-config/CupangOs-21.02/feeds.conf.default
   CONFIG_FILE: router-config/CupangOs-21.02/.config
   DIY_P1_SH: router-config/CupangOs-21.02/diy-part1.sh
