--- a/router-config/CupangOs-21.02/.config
+++ b/router-config/CupangOs-21.02/.config
@@ -398,6 +398,7 @@ CONFIG_BRCMFMAC_SDIO=y
 CONFIG_LUCI_LANG_en=y
 
 # LuCI-app:
+CONFIG_PACKAGE_luci-compat=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
 # CONFIG_PACKAGE_luci-app-autoreboot is not set
@@ -465,7 +466,11 @@ CONFIG_LUCI_LANG_en=y
 # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
 # CONFIG_PACKAGE_luci-app-mtwifi is not set
 # CONFIG_PACKAGE_luci-app-music-remote-center is not set
-# CONFIG_PACKAGE_luci-app-mwan3 is not set
+CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_mwan3=y
+CONFIG_PACKAGE_libuci-lua=y
+CONFIG_PACKAGE_luci-mod-admin-full=y
+CONFIG_PACKAGE_luci-lib-nixio=y
 # CONFIG_PACKAGE_luci-app-mwan3helper is not set
 # CONFIG_PACKAGE_luci-app-n2n_v2 is not set
 # CONFIG_PACKAGE_luci-app-nfs is not set
@@ -690,6 +695,7 @@ CONFIG_KERNEL_MAGIC_SYSRQ=y
 #CONFIG_DOCKER_STO_BTRFS is not set
 
 #Add Additional packages
+CONFIG_PACKAGE_libc=y
 CONFIG_PACKAGE_python=y
 CONFIG_PACKAGE_ffmpeg=y
 CONFIG_PACKAGE_zsh=y
