--- a/.github/workflows/build-cupangOs.yml
+++ b/.github/workflows/build-cupangOs.yml
@@ -102,7 +102,7 @@ jobs:
         [ -d openwrt-armvirt ] || mkdir -p openwrt-armvirt
         cp -f openwrt/bin/targets/*/*/*.tar.gz openwrt-armvirt/ && sync
         sudo chmod +x make
-        sudo ./make -d -b s905x -k 5.4.178
+        sudo ./make -d -b s905x -k 5.4.178_5.10.99.5.15.22
         [ -d ipk ] || mkdir -p ipk
         cp -rf $(find openwrt/bin/packages/ -type f -name "*.ipk") ipk/ && sync
         sudo tar -czf ipk.tar.gz ipk && mv -f ipk.tar.gz out/ && sync
