--- a/.github/workflows/build-LEDE.yml
+++ b/.github/workflows/build-LEDE.yml
@@ -1,5 +1,4 @@
 #========================================================================================================================
-# Description: Automatically Build OpenWrt for Amlogic s9xxx tv box
 # Cron: min (0 - 59) / hour (0 - 23) / day of month (1 - 31) / month (1 - 12) / day of week (0 - 6)(Sunday - Saturday)
 # Source code repository: https://github.com/coolsnowwolf/lede / Branch: master
 #========================================================================================================================
@@ -20,11 +19,11 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: router-config/lede-master/feeds.conf.default
-  CONFIG_FILE: router-config/lede-master/.config
-  DIY_P1_SH: router-config/lede-master/diy-part1.sh
-  DIY_P2_SH: router-config/lede-master/diy-part2.sh
-  #TZ: Asia/Jakarta
+  FEEDS_CONF: router-config/lede/feeds.conf.default
+  CONFIG_FILE: router-config/lede/.config
+  DIY_P1_SH: router-config/lede/diy-part1.sh
+  DIY_P2_SH: router-config/lede/diy-part2.sh
+  TZ: Asia/Jakarta
 
 jobs:
   build:
@@ -44,7 +43,7 @@ jobs:
         sudo -E apt-get -qq install $(curl -fsSL git.io/ubuntu-2004-openwrt)
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
-        sudo timedatectl set-timezone "Asia/Jakarta"
+        sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
         echo "COMPILE_STARTINGTIME=$(date +"%m.%d.%H%M")" >> $GITHUB_ENV
@@ -97,14 +96,14 @@ jobs:
         echo "FILE_DATE=$(date +"%m.%d.%H%M")" >> $GITHUB_ENV
         echo "::set-output name=status::success"
 
-    - name: Build OpenWrt firmware
+    - name: Build LEDE firmware
       if: steps.compile.outputs.status == 'success' && !cancelled()
       id: build
       run: |
         [ -d openwrt-armvirt ] || mkdir -p openwrt-armvirt
         cp -f openwrt/bin/targets/*/*/*.tar.gz openwrt-armvirt/ && sync
         sudo chmod +x make
-        sudo ./make -d ${{ github.event.inputs.more_settings }}
+        sudo ./make -d -b s905x -k 5.4.178_5.10.99.5.15.22
         [ -d ipk ] || mkdir -p ipk
         cp -rf $(find openwrt/bin/packages/ -type f -name "*.ipk") ipk/ && sync
         sudo tar -czf ipk.tar.gz ipk && mv -f ipk.tar.gz out/ && sync
@@ -112,21 +111,19 @@ jobs:
         echo "PACKAGED_OUTPUTDATE=$(date +"%m.%d.%H%M")" >> $GITHUB_ENV
         echo "::set-output name=status::success"
 
-    - name: Upload OpenWrt Firmware to Release
+    - name: Upload LEDE Firmware to Release
       uses: ncipollo/release-action@v1
       if: steps.build.outputs.status == 'success' && !cancelled()
       with:
-        tag: cupangOs_lede_${{ env.PACKAGED_OUTPUTDATE }}
+        tag: LEDE_${{ env.PACKAGED_OUTPUTDATE }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          This is OpenWrt LEDE for Amlogic s9xxx tv box
+          This is LEDE for Amlogic s9xxx tv box
           * Firmware information
           Default IP: 192.168.1.1
           Default username: root
           Default password: password
           Default WIFI name: OpenWrt
           Default WIFI password: none
-          Install to EMMC: Login to OpenWrt → System → Amlogic Service → Install OpenWrt
-
