--- a/router-config/CupangOs-21.02/.config
+++ b/router-config/CupangOs-21.02/.config
@@ -2,7 +2,6 @@
 CONFIG_TARGET_armvirt=y
 CONFIG_TARGET_armvirt_64=y
 CONFIG_TARGET_armvirt_64_Default=y
-
 # Firmware Type:
 CONFIG_USES_DEVICETREE=y
 CONFIG_USES_INITRAMFS=y
@@ -19,7 +18,6 @@ CONFIG_ARCH="aarch64"
 CONFIG_LINUX_5_4=y
 CONFIG_DEFAULT_base-files=y
 CONFIG_DEFAULT_busybox=y
-
 # Target and Root filesystem Images:
 CONFIG_TARGET_ROOTFS_INITRAMFS=y
 CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE=y
@@ -39,7 +37,6 @@ CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 # CONFIG_TARGET_IMAGES_GZIP is not set
 # CONFIG_EXPERIMENTAL is not set
-
 # National language packs, luci-i18n-base:
 # CONFIG_PACKAGE_luci-i18n-base-bg is not set
 # CONFIG_PACKAGE_luci-i18n-base-ca is not set
@@ -69,7 +66,6 @@ CONFIG_PACKAGE_luci-i18n-base-en=y
 # CONFIG_PACKAGE_luci-i18n-base-vi is not set
 # CONFIG_PACKAGE_luci-i18n-base-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-base-zh-tw is not set
-
 # Firmware:
 CONFIG_PACKAGE_brcmfmac-firmware-4329-sdio=y
 CONFIG_PACKAGE_brcmfmac-firmware-43362-sdio=y
@@ -97,7 +93,6 @@ CONFIG_PACKAGE_rtl8723au-firmware=y
 CONFIG_PACKAGE_rtl8723bs-firmware=y
 CONFIG_PACKAGE_rtl8723bu-firmware=y
 CONFIG_PACKAGE_wireless-regdb=y
-
 # Wireless Drivers:
 # CONFIG_PACKAGE_kmod-adm8211 is not set
 CONFIG_PACKAGE_kmod-ath=y
@@ -202,7 +197,6 @@ CONFIG_PACKAGE_kmod-rtw88=y
 # CONFIG_PACKAGE_kmod-wl18xx is not set
 # CONFIG_PACKAGE_kmod-wlcore is not set
 # CONFIG_PACKAGE_kmod-zd1211rw is not set
-
 # Filesystems:
 # CONFIG_PACKAGE_kmod-fs-9p is not set
 # CONFIG_PACKAGE_kmod-fs-afs is not set
@@ -237,7 +231,6 @@ CONFIG_PACKAGE_kmod-fs-squashfs=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-fs-xfs=y
 CONFIG_PACKAGE_kmod-fuse=y
-
 # USB Support:
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-dwc2=y
@@ -270,7 +263,6 @@ CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
 CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
 CONFIG_PACKAGE_kmod-usb-net-smsc95xx=y
 CONFIG_PACKAGE_kmod-usb-net-sr9700=y
-CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-serial=y
 CONFIG_PACKAGE_kmod-usb-serial-ch341=y
@@ -289,7 +281,6 @@ CONFIG_PACKAGE_kmod-usbip=y
 CONFIG_PACKAGE_kmod-usbip-client=y
 CONFIG_PACKAGE_kmod-usbip-server=y
 CONFIG_PACKAGE_kmod-usbmon=y
-
 # WWAN:
 # CONFIG_PACKAGE_adb-enablemodem is not set
 CONFIG_PACKAGE_comgt=y
@@ -297,7 +288,6 @@ CONFIG_PACKAGE_comgt=y
 CONFIG_PACKAGE_comgt-ncm=y
 # CONFIG_PACKAGE_umbim is not set
 CONFIG_PACKAGE_uqmi=y
-
 # Network Devices:
 # CONFIG_PACKAGE_kmod-3c59x is not set
 # CONFIG_PACKAGE_kmod-8139cp is not set
@@ -368,7 +358,6 @@ CONFIG_PACKAGE_kmod-mii=y
 # CONFIG_PACKAGE_kmod-via-rhine is not set
 # CONFIG_PACKAGE_kmod-via-velocity is not set
 # CONFIG_PACKAGE_kmod-vmxnet3 is not set
-
 # WirelessAPD:
 CONFIG_PACKAGE_hostapd-common=y
 CONFIG_PACKAGE_wpa-cli=y
@@ -377,7 +366,6 @@ CONFIG_DRIVER_WEXT_SUPPORT=y
 CONFIG_DRIVER_11N_SUPPORT=y
 CONFIG_DRIVER_11AC_SUPPORT=y
 CONFIG_PACKAGE_wpad=y
-
 # Protocols:
 CONFIG_PACKAGE_luci-proto-3g=y
 CONFIG_PACKAGE_luci-proto-bonding=y
@@ -392,13 +380,9 @@ CONFIG_PACKAGE_luci-proto-sstp=y
 CONFIG_PACKAGE_luci-proto-relay=y
 # CONFIG_PACKAGE_luci-proto-vpnc is not set
 CONFIG_PACKAGE_luci-proto-wireguard=y
-
 # Other Config info:
-CONFIG_BRCMFMAC_SDIO=y
 CONFIG_LUCI_LANG_en=y
-
 # LuCI-app:
-CONFIG_PACKAGE_luci-compat=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
 # CONFIG_PACKAGE_luci-app-autoreboot is not set
@@ -452,7 +436,6 @@ CONFIG_PACKAGE_luci-compat=y
 # CONFIG_PACKAGE_luci-app-freifunk-diagnostics is not set
 # CONFIG_PACKAGE_luci-app-freifunk-policyrouting is not set
 # CONFIG_PACKAGE_luci-app-freifunk-widgets is not set
-# CONFIG_PACKAGE_luci-app-frps is not set
 # CONFIG_PACKAGE_luci-app-fwknopd is not set
 # CONFIG_PACKAGE_luci-app-jd-dailybonus is not set
 # CONFIG_PACKAGE_luci-app-guest-wifi is not set
@@ -471,6 +454,26 @@ CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-lib-nixio=y
+CONFIG_PACKAGE_luci-compat=y
+#mwan3 iptables packages
+CONFIG_PACKAGE_ebtables-utils=y
+CONFIG_PACKAGE_ebtables=y
+CONFIG_PACKAGE_ip6tables-extra=y
+CONFIG_PACKAGE_ip6tables-mod-nat=y
+CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_ip=y
+CONFIG_PACKAGE_ipset=y
+CONFIG_PACKAGE_ipset-dns=y
+CONFIG_PACKAGE_ipset-lists=y
+CONFIG_PACKAGE_iptables=y
+CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_iptables-mod-extra=y
+CONFIG_PACKAGE_iptables-mod-filter=y
+CONFIG_PACKAGE_iptables-mod-ipopt=y
+CONFIG_PACKAGE_iptables-mod-ipsec=y
+CONFIG_PACKAGE_iptables-mod-nat-extra=y
+CONFIG_PACKAGE_iptables-mod-tproxy=y
+CONFIG_PACKAGE_jshn=y
 # CONFIG_PACKAGE_luci-app-mwan3helper is not set
 # CONFIG_PACKAGE_luci-app-n2n_v2 is not set
 # CONFIG_PACKAGE_luci-app-nfs is not set
@@ -522,7 +525,6 @@ CONFIG_PACKAGE_luci-lib-nixio=y
 # CONFIG_PACKAGE_luci-app-wireguard is not set
 # CONFIG_PACKAGE_luci-app-wrtbwmon is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
-
 # Custom Application
 CONFIG_PACKAGE_luci-app-adblock=y
 CONFIG_PACKAGE_luci-app-amlogic=y
@@ -530,18 +532,79 @@ CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-ramfree=y
+# install netmon & tinyfm
 CONFIG_PACKAGE_luci-app-tinyfm=y
 CONFIG_PACKAGE_luci-app-netmon=y
-
+#HelmiWrt Packages
+CONFIG_PACKAGE_luci-app-libernet=n
+CONFIG_PACKAGE_luci-app-libernet-bin=n
+CONFIG_PACKAGE_luci-app-libernet-plus=y
+CONFIG_PACKAGE_luci-app-shutdown=y
+CONFIG_PACKAGE_luci-app-v2raya=y
+CONFIG_PACKAGE_luci-app-xderm-bin=y
+CONFIG_PACKAGE_luci-app-xderm=n
+CONFIG_PACKAGE_luci-app-xderm-limit=y
+CONFIG_PACKAGE_luci-app-wegare=y
+# Libernet requirements
+CONFIG_PACKAGE_git=y
+CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_coreutils-stdbuf=y
+CONFIG_PACKAGE_jq=y
+CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_openssh-client=y
+CONFIG_PACKAGE_https-dns-proxy=y
+CONFIG_PACKAGE_php7=y
+CONFIG_PACKAGE_php7-cgi=y
+CONFIG_PACKAGE_php7-mod-json=y
+CONFIG_PACKAGE_php7-mod-session=y
+CONFIG_PACKAGE_python3=y
+CONFIG_PACKAGE_httping=y
+CONFIG_PACKAGE_stunnel=y
+CONFIG_PACKAGE_stubby=y
+CONFIG_PACKAGE_getdns=y
+# Xderm Mini GUI requirements
+CONFIG_PACKAGE_badvpn=y
+CONFIG_PACKAGE_corkscrew=y
+CONFIG_PACKAGE_coreutils-timeout=y
+CONFIG_PACKAGE_libudev-fbsd=y
+CONFIG_PACKAGE_libudev-zero=y
+CONFIG_PACKAGE_procps-ng=y
+CONFIG_PACKAGE_procps-ng-ps=y
+CONFIG_PACKAGE_python3-pip=y
+CONFIG_PACKAGE_sshpass=y
+CONFIG_PACKAGE_tc=y
+# Mikhmon requirements
+CONFIG_PACKAGE_php7-fpm=y
+CONFIG_PACKAGE_php7-mod-curl=y
+CONFIG_PACKAGE_php7-mod-ctype=y
+CONFIG_PACKAGE_php7-mod-dom=y
+CONFIG_PACKAGE_php7-mod-gettext=y
+CONFIG_PACKAGE_php7-mod-gmp=y
+CONFIG_PACKAGE_php7-mod-iconv=y
+CONFIG_PACKAGE_php7-mod-mbstring=y
+CONFIG_PACKAGE_php7-mod-opcache=y
+CONFIG_PACKAGE_php7-mod-pcntl=y
+CONFIG_PACKAGE_php7-mod-pdo=y
+CONFIG_PACKAGE_php7-mod-zip=y
+CONFIG_PACKAGE_zoneinfo-core=y
+CONFIG_PACKAGE_zoneinfo-asia=y
+CONFIG_PACKAGE_zoneinfo-simple=y
 # LuCI-theme:
 #CONFIG_PACKAGE_luci-theme-material  is not set
 CONFIG_PACKAGE_luci-theme-tano=y
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-argon-lr=y
+CONFIG_PACKAGE_luci-theme-argonne=y
 CONFIG_PACKAGE_luci-app-argon-config=y
+CONFIG_PACKAGE_luci-app-argonne-config=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-netgear=n
 CONFIG_PACKAGE_luci-theme-neobird=y
-
+CONFIG_PACKAGE_luci-theme-tomato=y
+CONFIG_PACKAGE_luci-theme-mcat=y
+CONFIG_PACKAGE_luci-theme-edge=y
+CONFIG_PACKAGE_luci-theme-atmaterial_new=y
 # Perl:
 CONFIG_PACKAGE_perl=y
 CONFIG_PACKAGE_perl-http-date=y
@@ -549,7 +612,6 @@ CONFIG_PACKAGE_perlbase-getopt=y
 CONFIG_PACKAGE_perlbase-time=y
 CONFIG_PACKAGE_perlbase-unicode=y
 CONFIG_PACKAGE_perlbase-utf8=y
-
 # Software:
 CONFIG_PACKAGE_aircrack-ng=m
 # CONFIG_PACKAGE_apcupsd is not set
@@ -570,7 +632,6 @@ CONFIG_PACKAGE_chattr=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_cfdisk=y
 CONFIG_PACKAGE_coremark=y
-CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_default-settings=y
@@ -590,8 +651,6 @@ CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iconv=y
 CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_iwinfo=y
-CONFIG_PACKAGE_jq=y
-CONFIG_PACKAGE_jshn=y
 CONFIG_PACKAGE_iftop=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_lsattr=y
@@ -672,7 +731,6 @@ CONFIG_PACKAGE_wireless-tools=y
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_whereis=y
 CONFIG_PACKAGE_wget=y
-CONFIG_PACKAGE_wpad=y
 CONFIG_PACKAGE_wwan=y
 CONFIG_PACKAGE_xfs-fsck=y
 CONFIG_PACKAGE_xfs-mkfs=y
@@ -685,7 +743,6 @@ CONFIG_STRACE_NONE=y
 CONFIG_PCAP_HAS_USB=y
 CONFIG_PCAP_HAS_NETFILTER=y
 CONFIG_KERNEL_MAGIC_SYSRQ=y
-
 #Add luci-app-dockerman
 #CONFIG_PACKAGE_luci-app-dockerman is not set
 #CONFIG_PACKAGE_dockerd is not set
@@ -693,7 +750,6 @@ CONFIG_KERNEL_MAGIC_SYSRQ=y
 #CONFIG_PACKAGE_docker-compose is not set
 #CONFIG_DOCKER_STO_EXT4 is not set
 #CONFIG_DOCKER_STO_BTRFS is not set
-
 #Add Additional packages
 CONFIG_PACKAGE_libc=y
 CONFIG_PACKAGE_python=y
@@ -703,11 +759,15 @@ CONFIG_PACKAGE_openssh-sftp-client=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_qrencode=y
 CONFIG_PACKAGE_unrar=y
-# CONFIG_PACKAGE_luci-app-pptp-server is not set
+CONFIG_PACKAGE_v2ray=y
+CONFIG_PACKAGE_shadowsocks=y
+CONFIG_PACKAGE_go-tun2socks=y
+CONFIG_PACKAGE_badvpn-tun2socks=y
 CONFIG_PACKAGE_xl2tpd=y
+CONFIG_PACKAGE_openvpn-openssl=y
+# CONFIG_PACKAGE_luci-app-pptp-server is not set
 # CONFIG_PACKAGE_luci-app-adguardhome is not set
 # CONFIG_PACKAGE_luci-app-3ginfo-lite is not set
-
 # Add luci-app-passwall
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
@@ -730,7 +790,6 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
-
 # Add luci-app-ssr-plus
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
@@ -747,6 +806,5 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_Plugin=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-
 # OPENCLASH
 CONFIG_PACKAGE_luci-app-openclash=y
