--- a/router-config/CupangOs-21.02/.config
+++ b/router-config/CupangOs-21.02/.config
@@ -455,6 +455,11 @@ CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-lib-nixio=y
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_libpam=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_liblzma=y
+CONFIG_PACKAGE_libnetsnmp=y
+CONFIG_PACKAGE_noddos=y
 #mwan3 iptables packages
 CONFIG_PACKAGE_ebtables-utils=y
 CONFIG_PACKAGE_ebtables=y
@@ -467,6 +472,9 @@ CONFIG_PACKAGE_ipset-dns=y
 CONFIG_PACKAGE_ipset-lists=y
 CONFIG_PACKAGE_iptables=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
+CONFIG_PACKAGE_kmod-ipt-raw=y
+CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-filter=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
