--- a/.github/workflows/Build_LEDE.yml
+++ b/.github/workflows/Build_LEDE.yml
@@ -3,10 +3,10 @@
 #
 # Lisence: MIT
 #
-# Author: Lunseil
+# Author: thecupangin
 #=================================================
 
-name: 编译X86_64_lede
+name: Build LEDE
 
 on:      
   repository_dispatch:
@@ -21,14 +21,14 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: x86_64.config
+  CONFIG_FILE: lede.config
   DIY_P1_SH: diy.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
-  TZ: Asia/Shanghai
+  TZ: Asia/Jakarta
   
 jobs:
   build:
@@ -77,7 +77,7 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
    
-    - name: 第三方插件>>1
+    - name: third-party plugins>>1
       working-directory: ./openwrt
       run: |
         git clone https://github.com/fw876/helloworld.git package/ssrp
@@ -85,18 +85,17 @@ jobs:
         git clone https://github.com/esirplayground/luci-app-poweroff.git package/poweroff
         git clone https://github.com/jerrykuku/luci-app-argon-config.git package/argon-config
         git clone https://github.com/jerrykuku/luci-app-ttnode.git package/ttnode
-    - name: 第三方插件>>2
+        git clone https://github.com/thecupangin/cupangOs-packages.git package/cupang
+    - name: third-party plugins>>2
       working-directory: ./openwrt
       run: |
         cd package/lean
         rm -rf luci-app-netdata
         git clone https://github.com/sirpdboy/luci-app-netdata.git
-        rm -rf luci-app-jd-dailybonus
-        git clone https://github.com/jerrykuku/luci-app-jd-dailybonus.git 
         rm -rf luci-theme-argon
         git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
         
-    - name: 升级 & 安装 feeds
+    - name: Upgrade & install feeds
       working-directory: ./openwrt
       run: |
         ./scripts/feeds update -a
@@ -187,7 +186,7 @@ jobs:
     #    echo "::warning file=cowtransfer.com::$(cat cowtransfer.log | grep https)"
     #    echo "::set-output name=url::$(cat cowtransfer.log | grep https | cut -f3 -d" ")"
         
-    - name: 将固件上传到WeTransfer
+    - name: Upload to WeTransfer
       id: wetransfer
       if: steps.organize.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
       run: |
@@ -196,7 +195,7 @@ jobs:
         echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
         echo "::set-output name=url::$(cat wetransfer.log | grep https | cut -f3 -d" ")"
         
-    - name: 生成发布标签
+    - name: Generate release tags
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
@@ -208,7 +207,7 @@ jobs:
         [ $UPLOAD_WETRANSFER = true ] && echo "🚀 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "::set-output name=status::success"
         
-    - name: 上传固件release
+    - name: Upload to Release
       uses: softprops/action-gh-release@v1
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
@@ -218,17 +217,17 @@ jobs:
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
 
-    - name: 删除工作流运行
+    - name: delete workflow
       uses: GitRML/delete-workflow-runs@main
       with:
         retain_days: 1
         keep_minimum_runs: 3
 
-    - name: 删除旧版本
+    - name: delete old release
       uses: dev-drprasad/delete-older-releases@v0.1.0
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-        keep_latest: 3
+        keep_latest: 1
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
